--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,19 @@ on:
       branches: [ master ]
 jobs:
     heroku_login_job:
-        runs-on:ubuntu-latest
-        name: A jo
+        runs-on: ubuntu-latest
+        name: A job to check if user is logged in
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v2
+          - name: Check user if logged in action step
+            uses: ./ #Uses an action in the root directory
+            id: login 
+            with: 
+              heroku_app_name : ''
+              heroku_api_key: ''
+              heroku_email_address: ''
+              want_to_login: true
+          #Use the output  from the hello step
+          - name: Get the output status
+            run: echo "${{steps.login.outputs.status}}"
