--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
         description: 'Deploy using docker Container registry or Build Manifest'
         required: false
         default: false
+    disable_collect_static:
+        description: 'Disable collect static on pushing'
+        required: false
+        default: false
 outputs:
     status:
         description: "Status of the action"
