Added use_build_manifest option input

--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,11 @@ inputs:
         required: false
         default: false
     use_docker:
-        description: 'Deploy using docker Container registry or Build Manifest'
+        description: 'Deploy using docker Container registry'
+        required: false
+        default: false
+    use_build_manifest:
+        description: 'Deploy using heroku Build Manifest'
         required: false
         default: false
     disable_collect_static:
